<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.screens.login.LoginFragment"
        android:label="@string/The_Shoe_Store"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
    </fragment>

    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.screens.welcome.WelcomeFragment"
        android:label="@string/The_Shoe_Store"
        tools:layout="@layout/fragment_welcome" >
        <action
            android:id="@+id/action_welcomeFragment_to_instructionFragment"
            app:destination="@id/instructionFragment" />
    </fragment>
    <fragment
        android:id="@+id/instructionFragment"
        android:name="com.udacity.shoestore.screens.instruction.InstructionFragment"
        android:label="@string/Instruction"
        tools:layout="@layout/fragment_instruction" >
        <action
            android:id="@+id/action_instructionFragment_to_inventoryFragment"
            app:destination="@id/inventoryFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/inventoryFragment"
        android:name="com.udacity.shoestore.screens.inventory.InventoryFragment"
        android:label="@string/Inventory"
        tools:layout="@layout/fragment_inventory" >
        <action
            android:id="@+id/action_inventoryFragment_to_shoeDetailFragment"
            app:destination="@id/shoeDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailFragment"
        android:name="com.udacity.shoestore.screens.detail.ShoeDetailFragment"
        android:label="@string/Details"
        tools:layout="@layout/fragment_shoe_detail" >
        <action
            android:id="@+id/action_shoeDetailFragment_to_inventoryFragment"
            app:destination="@id/inventoryFragment"
            app:popUpTo="@id/instructionFragment" />
    </fragment>
</navigation>