<?xml version="1.0" encoding="utf-8"?><!-- ConstraintLayout is used in fragment_shoe_detail
as it helps easily to link the child views-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.shoestore.screens.detail.ShoeDetailFragment">

    <data>

        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.ShoeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/create_new_item"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/shoe_name_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/shoe_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/Name"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@={shoeViewModel.name}"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/shoe_size_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_text" />

        <EditText
            android:id="@+id/shoe_size_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/Size"
            android:inputType="number"
            android:minHeight="48dp"
            android:text="@={shoeViewModel.size}"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/shoe_company_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_text" />

        <EditText
            android:id="@+id/shoe_company_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/Company"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@={shoeViewModel.company}"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/shoe_description_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_text" />

        <EditText
            android:id="@+id/shoe_description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/Description"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@={shoeViewModel.description}"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_company_text" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> shoeViewModel.onCancel()}"
            android:text="@string/Cancel"
            android:textColor="@color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/add_button"
            app:layout_constraintEnd_toStartOf="@+id/add_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> shoeViewModel.onAdd()}"
            android:text="@string/Add"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancel_button"
            app:layout_constraintTop_toBottomOf="@+id/shoe_description_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>